[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "war-dashboard-data"
version = "1.0.0"
description = "Geopolitical conflict risk probabilities and political events data for AI agents via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Futuristic Risk Intelligence"}]
keywords = ["mcp", "geopolitical", "risk", "conflict", "trading", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/cct15/war-dashboard-data"
Repository = "https://github.com/cct15/war-dashboard-data"

[project.scripts]
war-dashboard-data = "war_dashboard_data.server:main"

[tool.setuptools.packages.find]
include = ["war_dashboard_data*"]
